2018-06-18 Added a caching of the video posters
2018-06-15 Changed labels for Limited Show Answer addon
2018-06-15 Added TTS support for Text Selection
2018-06-14 Added new addon Limited Show Answers
2018-06-05 Added TTS support for Table cells
2018-06-05 Moved pausing on getState to destroy method in media addons
2018-06-04 Fixed issues with TTS handling of the Dropdown gap in Text module
2018-05-28 Fixed issues with hover style in reset button on mobile
2018-05-28 Fixed issue with TTS in multiplegap after reset
2018-05-28 Added TTS support for Image Identification
2018-05-25 Added a test to check for special character handling in text coloring  
2018-05-24 Fixed conflicts between WCAG mode and NVDA
2018-05-24 Added TTS support for Zoom Image
2018-05-21 Added TTS support for Heading
2018-05-15 Fixed several issues with choice module on mobile devices
2018-05-15 Fixed cell-show-answers class name in gamememo
2018-05-15 Added class on hover in TrueFalse addon
2018-05-14 Added TTS support for alt texts of images in multiple modules/addons
2018-05-11 Added keyboard shortcut for changing the page in player
2018-05-09 Fixed problems with static footer display when chaning layouts. Fixed problems with footer width after orientation change.
2018-05-08 Fixed issues with eKeyboard in Popup.
2018-05-07 Fixed issues with special characters in Text module gaps.
2018-04-27 Fixed problem with saving choice feedback property.
2018-04-27 Added TTS support for Hierarchical Lesson Report
2018-04-26 Fixed issues with spacebar in keyboard navigation
2018-04-26 Added TTS support for feedback addon
2018-04-26 Added TTS support for Image Source and Multiple gap
2018-04-24 Fixed problem with != statement in math module
2018-04-24 Fixed problems with hovering classes and executing actions in button modules.
2018-04-24 Added show and hide commands to Page Counter addon.
2018-04-24 Fixed problem with size of popup