@@ -1,0 +1,8 @@
+package com.lorepo.icplayer.client.module;
+
+public interface IWCAGModuleModel {
+	/*
+	 * This is a marker interface meant to indicate
+	 * That the module associated with this model implements WCAG
+	 * */
+}
