@@ -12,9 +12,10 @@ import com.lorepo.icf.utils.StringUtils;
 import com.lorepo.icf.utils.XMLUtils;
 import com.lorepo.icf.utils.i18n.DictionaryWrapper;
 import com.lorepo.icplayer.client.module.BasicModuleModel;
+import com.lorepo.icplayer.client.module.IWCAGModuleModel;
 import com.lorepo.icplayer.client.module.choice.SpeechTextsStaticListItem;
 
-public class CheckButtonModule extends BasicModuleModel {
+public class CheckButtonModule extends BasicModuleModel implements IWCAGModuleModel {
 
 	private String checkTitle = "";
 	private String unCheckTitle = "";
