@@ -13,8 +13,9 @@ import com.lorepo.icf.properties.IStaticListProperty;
 import com.lorepo.icf.utils.XMLUtils;
 import com.lorepo.icf.utils.i18n.DictionaryWrapper;
 import com.lorepo.icplayer.client.module.BasicModuleModel;
+import com.lorepo.icplayer.client.module.IWCAGModuleModel;
 
-public class ChoiceModel extends BasicModuleModel{
+public class ChoiceModel extends BasicModuleModel implements IWCAGModuleModel{
 
 	private boolean isMulti = false;
 	private ArrayList<ChoiceOption>	options = new ArrayList<ChoiceOption>();	
