@@ -14,9 +14,10 @@ import com.lorepo.icf.utils.StringUtils;
 import com.lorepo.icf.utils.XMLUtils;
 import com.lorepo.icf.utils.i18n.DictionaryWrapper;
 import com.lorepo.icplayer.client.module.BasicModuleModel;
+import com.lorepo.icplayer.client.module.IWCAGModuleModel;
 import com.lorepo.icplayer.client.module.ModuleUtils;
 
-public class LimitedCheckModule extends BasicModuleModel {
+public class LimitedCheckModule extends BasicModuleModel implements IWCAGModuleModel {
 	
 	private String checkText = "";
 	private String unCheckText = "";
